survey-salesforce/salesforce-app/src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <description>This is the alias of the Survey</description>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Message__c</fullName>
        <defaultValue>&quot;Thank you for taking the time to complete this survey!&quot;</defaultValue>
        <label>Message After Submission</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>The ISO 3166-1 alpha-2 country code</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <label>Deployment</label>
        <picklist>
            <picklistValues>
                <fullName>Smartphone</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gps_Location_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>GPS Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gps_ShowMap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPS Show Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterviewMapField__c</fullName>
        <description>Indicates which field maps with the interviewee field of the survey</description>
        <label>Interviewee Map Field</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the survey is a PPI Survey</description>
        <label>Is PPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPIDataYear__c</fullName>
        <description>Data year for the PPI survey</description>
        <label>Data Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuestionCount__c</fullName>
        <label>Question Count</label>
        <summaryForeignKey>Question__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ResponseCount__c</fullName>
        <label>Response Count</label>
        <summaryForeignKey>Submission__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saving_XForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used only when saving an XForm to avoid the deletion of the XForm in the CleanXForm trigger</description>
        <label>Saving XForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <formula>IMAGE(
CASE( Status__c ,
&quot;Draft&quot;,&quot;/resource/IconPackage/actions/document-edit.png&quot;,
&quot;Published&quot;, &quot;/resource/IconPackage/actions/arrow-right-3.png&quot;,
&quot;Closed&quot;,&quot;/resource/IconPackage/actions/dialog-cancel-5.png&quot;,
&quot;&quot;),
&quot;Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XForm_Status__c</fullName>
        <description>XForm status indicates if the version has an xform and if it has customizations</description>
        <label>XForm Status</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEFAULT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Country_Code_Should_Have_A_Match</fullName>
        <active>true</active>
        <description>Validate that the country code have a match in the country list</description>
        <errorConditionFormula>IsPPI__c &amp;&amp;
VLOOKUP( $ObjectType.ISO_Country__c.Fields.Name,
    $ObjectType.ISO_Country__c.Fields.Name,
    CountryCode__c ) = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>CountryCode__c</errorDisplayField>
        <errorMessage>The selected country code is not valid. This should be an ISO 3166-1 alpha-2 country code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>YearFormat</fullName>
        <active>true</active>
        <description>Validates that the year should be an integer greater than 1900</description>
        <errorConditionFormula>PPIDataYear__c &lt; 1900</errorConditionFormula>
        <errorDisplayField>PPIDataYear__c</errorDisplayField>
        <errorMessage>The year should be greater than 1900</errorMessage>
    </validationRules>
</CustomObject>